--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,12 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+@import '../theme/common/header.scss';
+@import '../theme/common/item.scss';
+@import '../theme/common/content.scss';
+@import '../theme/common/toast.scss';
+@import '../theme/common/list.scss';
+
+
+
+
