--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,2 +1,19 @@
 page-login {
+  .grid {
+    height: 100%;
+    justify-content: center;
+    text-align: center;
+    .social-icons img{
+      width: 50%;
+    }
+  }
+  button.signup {
+    margin-top: 20px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    color: #333;
+
+    &.activated {
+      background-color: rgb(220, 220, 220);
+    }
+  }
 }
