--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,16 +5,6 @@ $font-path: "../assets/fonts";
 @import "ionic.globals";
 
 
-// Shared Variables
-// --------------------------------------------------
-// To customize the look and feel of this app, you can override
-// the Sass variables found in Ionic's source scss files.
-// To view all the possible Ionic variables, see:
-// http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
-
-$text-color:        #000;
-$background-color:  #fff;
-
 
 // Named Color Variables
 // --------------------------------------------------
@@ -25,12 +15,29 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:        #006878,
+  secondary:      #28937C,
+  success:        #418733,
+  danger:         #873333,
+  light:          #FAE2AA,
+  light-second:   #FAE7B9,
+  dark:           #00262C,
+  box-shadow:     rgba(0, 0, 0, 0.58),
 );
+
+// Shared Variables
+// --------------------------------------------------
+// To customize the look and feel of this app, you can override
+// the Sass variables found in Ionic's source scss files.
+// To view all the possible Ionic variables, see:
+// http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
+
+$text-color:          color($colors, dark);
+$app-background:      linear-gradient(to right, color($colors, light) 0%, color($colors, light-second) 100%);
+$background-color:    transparent;
+$toolbar-background:  transparent;
+$text-input-highlight-color-valid: color($colors, success);
+$text-input-highlight-color: color($colors, success);
 
 
 // App iOS Variables
@@ -43,8 +50,7 @@ $colors: (
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
-
-
+$box-shadow-md: 0px 1px 14px color($colors, box-shadow);
 
 
 // App Windows Variables
