Corrected load spinner and modified Setting to SettingServices with localstorage

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,6 +19,7 @@
 @import '../theme/common/content.scss';
 @import '../theme/common/toast.scss';
 @import '../theme/common/list.scss';
+@import '../theme/common/loading-service.scss';
 
 
 
