added plugin cordova whitelist and fixed language select

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,7 +4,7 @@ $font-path: "../assets/fonts";
 
 @import "ionic.globals";
 
-
+$app-direction: multi;
 
 // Named Color Variables
 // --------------------------------------------------
