--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -8,12 +8,12 @@ page-login {
     }
   }
   button.signup {
-    margin-top: 20px;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-    color: #333;
+    margin-top: 20px !important;
+    box-shadow: 0px 1px 2px color($colors, box-shadow);
+    color: color($colors, dark);
 
     &.activated {
-      background-color: rgb(220, 220, 220);
+      background-color: color($colors, light);
     }
   }
 }
