--- a/src/pages/list-master/list-master.scss
+++ b/src/pages/list-master/list-master.scss
@@ -1,3 +1,29 @@
 page-list-master {
+  .card-background-page {
 
+    ion-card {
+      position: relative;
+      text-align: center;
+      .description {
+        position: absolute;
+        top: 80%;
+        width: 100%;
+        background-color: #458292;
+        opacity: 0.8;
+        padding: 10px;
+        color: azure;
+        .card-title {
+          font-size: 2.0em;
+          width: 100%;
+          font-weight: bold;
+        }
+
+        .card-subtitle {
+          font-size: 1.0em;
+          width: 100%;
+        }
+      }
+    }
+
+  }
 }
