--- a/src/theme/common/content.scss
+++ b/src/theme/common/content.scss
@@ -1,7 +1,7 @@
 ion-content {
   background: $app-background;
-  .item {
-    padding-right: 16px;
+  .scroll-content {
+    padding: 16px;
   }
   .custom-spinner-container {
     background-color: red;
