--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -37,9 +37,6 @@ $app-background:      linear-gradient(to right, color($colors, light) 0%, color(
 $background-color:    transparent;
 $toolbar-background:  transparent;
 $text-input-highlight-color-valid: color($colors, success);
-$text-input-highlight-color-invalid: color($colors, danger);
-$text-input-md-show-focus-highlight: false;
-$text-input-highlight-color: color($colors, success);
 
 
 // App iOS Variables
@@ -53,13 +50,13 @@ $text-input-highlight-color: color($colors, success);
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 $box-shadow-md: 0px 1px 14px color($colors, box-shadow);
+// $text-input-highlight-color-invalid: color($colors, danger);
+// $text-input-md-show-focus-highlight: true;
 
 
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
-
-
 
 
 // App Theme
