Added plugins permission, diagnostic, and camera of cordova

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,6 +21,7 @@
 @import '../theme/common/list.scss';
 @import '../theme/common/selector.scss';
 @import '../theme/common/loading-service.scss';
+@import '../theme/common/input.scss';
 
 
 
