--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -22,6 +22,7 @@ $colors: (
   light:          #FAE2AA,
   light-second:   #FAE7B9,
   dark:           #00262C,
+  info:           #00262C,
   box-shadow:     rgba(0, 0, 0, 0.58),
 );
 
