--- a/src/theme/common/toast.scss
+++ b/src/theme/common/toast.scss
@@ -5,3 +5,7 @@ ion-toast.success .toast-wrapper {
 ion-toast.error .toast-wrapper {
 	background: color($colors, danger);
 }
+
+ion-toast.info .toast-wrapper {
+	background: color($colors, info);
+}
