added field currency

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -22,6 +22,7 @@
 @import '../theme/common/selector.scss';
 @import '../theme/common/loading-service.scss';
 @import '../theme/common/input.scss';
+@import '../theme/common/popover.scss';
 
 
 
