Changed the size and the padding of popover

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -51,6 +51,7 @@ $text-input-highlight-color-valid: color($colors, success);
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 $box-shadow-md: 0px 1px 14px color($colors, box-shadow);
+$fab-size: 56px;
 // $text-input-highlight-color-invalid: color($colors, danger);
 // $text-input-md-show-focus-highlight: true;
 
