--- a/src/theme/common/header.scss
+++ b/src/theme/common/header.scss
@@ -1,4 +1,8 @@
 ion-header {
+  &::after {
+    background: none !important;
+  }
+
   ion-title {
     .toolbar-title {
       color: color($colors, dark);
