--- a/src/pages/list-master/list-master.scss
+++ b/src/pages/list-master/list-master.scss
@@ -1,26 +1,7 @@
 page-list-master {
-  .card-background-page {
-    position: relative;
-    column-count: 2;
-    column-gap: 1em;
-    ion-card {
-      display: inline-block;
-      margin: 0px 0px 4px 0px !important;
-      width: 100%;
-      .description {
-        top: 80%;
-        width: 100%;
-        background-color: #458292;
-        opacity: 0.8;
-        padding: 10px;
-        color: azure;
-        .card-title {
-          font-size: 1em;
-          width: 100%;
-          font-weight: bold;
-        }
-      }
+  .fab {
+    ion-icon {
+      font-size: 4.4rem;
     }
-
   }
 }
