Added delete item feature and refactored popover and take-picture.comp

--- a/src/pages/item-detail/item-detail.scss
+++ b/src/pages/item-detail/item-detail.scss
@@ -17,4 +17,9 @@ page-item-detail {
     background: white;
     position: absolute;
   }
+  .options {
+    .bar-button-md {
+      margin-right: 6px !important;
+    }
+  }
 }
