--- a/src/theme/common/popover.scss
+++ b/src/theme/common/popover.scss
@@ -4,4 +4,7 @@ ion-popover {
       padding-right: 8px !important;
     }
   }
+  .popover-content {
+    background: color($colors, light) !important;
+  }
 }
