--- a/src/components/card-item/card-item.component.scss
+++ b/src/components/card-item/card-item.component.scss
@@ -8,6 +8,7 @@ card-item {
       display: inline-block;
       margin: 0px 0px 4px 0px !important;
       width: 100%;
+      max-height: 200px;
       border-radius: 6px;
       .description {
         background-color: color($colors, primary);
