--- a/src/components/take-picture/take-picture.component.html
+++ b/src/components/take-picture/take-picture.component.html
@@ -4,10 +4,12 @@
     <div class="product-image-placeholder" (click)="presentMethodToUploadPictures()">
       <ion-icon name="camera"></ion-icon>
     </div>
-    <div *ngFor="let picture of picturesList; let i = index" [@flyInOut]="picture.state" class="product-image" (click)="deletePicture(i)">
-      <div class="product-hidder">
-        <img [src] = picture.base64Image >
+    <ng-container *ngFor="let picture of picturesList; let i = index">
+      <div *ngIf="!picture?.isThumbnail" [@flyInOut]="picture.state" class="product-image" (click)="deletePicture(i)">
+        <div class="product-hidder">
+          <img [src] = picture.base64Image >
+        </div>
       </div>
-    </div>
+    </ng-container>
   </div>
 </div>
