Created a view to edit user and to delete item

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -23,7 +23,7 @@
 @import '../theme/common/loading-service.scss';
 @import '../theme/common/input.scss';
 @import '../theme/common/popover.scss';
-
+@import '../theme/common/common-style.scss';
 
 
 
