--- a/src/components/gallery-item/gallery-item.component.html
+++ b/src/components/gallery-item/gallery-item.component.html
@@ -5,10 +5,8 @@
       <ion-icon name="camera"></ion-icon>
     </div>
     <ng-container *ngFor="let picture of picturesList; let i = index">
-      <div *ngIf="!picture?.isThumbnail" [@flyInOut]="picture.state" class="product-image" (click)="deletePicture(i)">
-        <div class="product-hidder">
-          <img [src] = picture.base64Image >
-        </div>
+      <div *ngIf="!picture?.isThumbnail" [@flyInOut]="picture.state" (click)="deletePicture(i)">
+        <div class="product-image" [style.background-image]="'url(' + picture.base64Image + ')'"></div>
       </div>
     </ng-container>
   </div>
