Changed name firsName to firstName

--- a/src/components/card-item/card-item.component.html
+++ b/src/components/card-item/card-item.component.html
@@ -1,9 +1,9 @@
 <div #container class="card-background-page" *ngIf="dataItems">
   <ion-card *ngFor="let item of dataItems | async; let i = index" [attr.id]="'element' + i">
     <span (click)="openItem(item.uuid)">
-      <img [defaultImage]="'./assets/imgs/thumb-spinner.gif'" [lazyLoad]="item.profileItem" [scrollObservable]="container.ionScroll"/>
+      <img [defaultImage]="'./assets/imgs/thumb-lazy.jpg'" [lazyLoad]="item?.profileItem" [scrollObservable]="container.ionScroll"/>
       <div class="description">
-        <div class="card-title">{{item.price | number}} {{item.currency}}</div>
+        <div class="card-title">{{item?.price | number}} {{item.currency}}</div>
       </div>
     </span>
   </ion-card>
