--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,19 +1,18 @@
 page-login {
-  .grid {
-    height: 100%;
-    justify-content: center;
-    text-align: center;
-    .social-icons img{
-      width: 50%;
-    }
-  }
-  button.signup {
-    margin-top: 20px !important;
-    box-shadow: 0px 1px 2px color($colors, box-shadow);
-    color: color($colors, dark);
+  ion-grid {
+    margin-top: 25%;
+    button.signup {
+      margin-top: 20px !important;
+      box-shadow: 0px 1px 2px color($colors, box-shadow);
+      color: color($colors, dark);
 
-    &.activated {
-      background-color: color($colors, light);
+      &.activated {
+        background-color: color($colors, light);
+      }
+    }
+    button.facebookUp {
+      margin-top: 20px !important;
+      box-shadow: 0px 1px 2px color($colors, box-shadow);
     }
   }
 }
